# src_platform_clip-config

./: AUTHORS  CHANGELOG  Makefile.in  README.md  configure  configure.ac
scripts/: Makefile.in  config-admin  list_optional.pl
src/: AddrsField.cpp  AddrsField.h  ClipNetProfile.cpp  ClipNetProfile.h  DownloadSourcesFrame.cpp  DownloadSourcesFrame.h  HostsWidget.cpp  HostsWidget.h  InheritSection.cpp  InheritSection.h  LogRemoteFrame.cpp  LogRemoteFrame.h  LogRotateFrame.cpp  LogRotateFrame.h  Makefile.in  NetAddrTab.cpp  NetAddrTab.h  NetAdminTab.cpp  NetAdminTab.h  NetDaemonThread.cpp  NetDaemonThread.h  NetFilterTab.cpp  NetFilterTab.h  NetGwTab.cpp  NetGwTab.h  NetInterfaceTab.cpp  NetInterfaceTab.h  NetJailTab.cpp  NetJailTab.h  NetPeerTab.cpp  NetPeerTab.h  NetTab.cpp  NetTab.h  NetUmtsTab.cpp  NetUmtsTab.h  NetWifiTab.cpp  NetWifiTab.h  PkgListTab.cpp  PkgListTab.h  PkgTable.cpp  (+53 more)
